modified movies view, supports trailers

--- a/app/views/wtf/_testing.html.erb
+++ b/app/views/wtf/_testing.html.erb
@@ -1,3 +1,6 @@
-<%= idea.title %>
+<%= directions %>
+<%= idea.title %><br>
+<%= image_tag idea.photo %><br>
 <%= idea.description.html_safe %>
+<%= @trailer.html_safe if @trailer %>
 <%= link_to "Fuck that", wtf_path, class: "wtf_link" %>
