--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,6 +1,5 @@
-<div id="wtf">
+<div class="landing" id="wtf">
   <form action="<%= wtf_path %>" class="wtf_form" method="post">
-   <input type="text" name="zip" value="60654">
    <input type="submit" value="WTF should I do this weekend?">
   </form>
 </div>
