--- a/app/views/wtf/_testing.html.erb
+++ b/app/views/wtf/_testing.html.erb
@@ -3,4 +3,7 @@
 <%= image_tag idea.photo %><br>
 <%= idea.description.html_safe if idea.description %><br>
 <%= @trailer.html_safe if @trailer %>
+<% if @link %>
+  <%= link_to "View on Rotten Tomatoes", @link %> 
+<% end %>
 <%= link_to "Fuck that", wtf_path, class: "wtf_link" %>
