--- a/app/views/wtf/_testing.html.erb
+++ b/app/views/wtf/_testing.html.erb
@@ -1,6 +1,6 @@
 <%= directions %>
 <%= idea.title %><br>
-<%= image_tag idea.photo %><br>
+<img src="<%= idea.photo %>"><br>
 <%= idea.description.html_safe if idea.description %><br>
 <%= @trailer.html_safe if @trailer %>
 <% if @link %>
