--- a/app/views/wtf/_testing.html.erb
+++ b/app/views/wtf/_testing.html.erb
@@ -6,4 +6,4 @@
 <% if @link %>
   <%= link_to "View on Rotten Tomatoes", @link %> 
 <% end %>
-<%= link_to "Fuck that", wtf_path, class: "wtf_link" %>
+<%= link_to "F*** that", wtf_path, class: "wtf_link" %>
